<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>guru.springframework5</groupId>
	<artifactId>sfw5-bg-petclinic</artifactId>
	<version>0.0.3-SNAPSHOT</version>

	<!-- To break project into multi-module - child modules created with "create simple project" -->
	<modules>
		<module>pet-clinic-data</module>
		<module>pet-clinic-web</module>
	</modules>

	<!-- Because breaking project into multi-module, this goes in this parent pom -->
	<packaging>pom</packaging>

	<name>sfw5-bg-petclinic</name>
	<description>SFW5 Version of Spring Petclinic</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.0.RELEASE</version> 
		<!-- COURSE USED 2.1.0.RELEASE ??? -->
		<!-- HOWEVER, version 2.1.0.RELEASE includes Spring Framework 5.1, but Model.getAttribute is in Spring Framework 5.2 so I use 2.2.0.RELEASE -->
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<!-- jaxb needed by hibernate for xml tools, but removed from when from Java 8 to 9. -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<jaxb.version>2.3.0</jaxb.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<!-- Jaxb needed since Java 9.  Java 9 removed from std libraries, but Hibernate requires XML tools so must include as dependency. -->
	<!-- To do this, need to also have <jaxb version> above. -->
	<dependencies>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${jaxb.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>${jaxb.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>${jaxb.version}</version>
		</dependency>
	</dependencies>
    
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<goals>install</goals>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<!-- Bring in Maven Surefire plugin. Using 2.22.0 and higher includes JUnit 5. -->
				<!-- Maven may bring in older version by default.  -->
				<!-- DO NOT include <dependency> for JUnit-platform-surefire-provider or compiler warns to use default from this surefire plugin -->
				<!-- Could omit since Maven version 3.5.4 has Surefire 2.22.1, but does not hurt so keep in case run with older version -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- ???<versionn>2.22.0<versionn>  --> 
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
			</plugin>

			<!-- Failsafe plugin for integration tests - any test ending in "IT" -->
			<!-- illegal asccess permit recommended for Java 11. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<!--  WAS 2.22.2 -->
				<version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
				<executions>
					<execution>
						<goals>	
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

 	<scm>
  		<developerConnection>scm:git:git@github.com:bettyjohb/sfw5-bg-petclinic.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

</project>
